2004-12-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/label.hg: Added get/set_angle().

2004-12-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooserbutton.hg: GtkFileChooser inherits from HBox, not 
	Button.

2004-12-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooserbutton.hg: Removed get/set_active(), because they 
	have been removed from GTK+.

2004-12-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellview.hg: Removed set_cell_data() because it has been 
	removed from GTK+.

2004-12-01  Murray Cumming  <murrayc@murrayc.com>

	* pango/pangomm/: Added types.h, for typedefs of simple structs.
	* pango/src/: Added renderer.[hg|ccg].
	* pango/src/context.hg: Add get/set_matrix().
	* pango/src/fontmetrics.hg: Added get_underline_position(), 
	get_underline_thickness(), get_strikethrough_position(), 
	get_strikethrough_thickness().
	* pango/src/pango_enums.defs: Regenerated.
	* tools/m4/convert_pango.m4: Added Matrix and Layout conversions.

2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/convert_gtk.m4: Use _CONVERT_CONST_REFPTR_TO_P_SUN() instead 
	of _CONVERT_CONST_REFPTR_TO_P(), to hopefully fix the SUN Forte build 
	problems in bug #154973.

2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus_and_toolbars: Applied Fredrik Arnerup's patch 
	to add a non-stock icon, with some changes.

2004-11-30  Murray Cumming  <murrayc@murrayc.com>
 
 	* atk/src/hyperlink.hg: get_object(),
 	* atk/src/object.hg: get_relation_set(),
 	* gdk/src/cursor.hg: get_display(),
 	* gdk/src/display.hg: get_default_group(),
 	* gdk/src/displaymanager.hg: get_default_display(),
 	* gdk/src/drawable.hg: get_screen(), get_display(),
 	* gdk/src/event.hg: get_screen(),
 	* gdk/src/visual.hg: get_system(), get_best(), get_screen(),
 	* gtk/src/widget.hg: get_default_style()

2004-11-25  Chris Vine  <cvine@freeserve.co.uk>

	* example/book/input/: This now works.

2004-11-25  Murray Cumming  <murrayc@murrayc.com>
