@@ -52,21 +52,25 @@ ExampleWindow::ExampleWindow()
   row[m_Columns.m_col_id] = 1;
   row[m_Columns.m_col_name] = "Billy Bob";
   row[m_Columns.m_col_foo] = true;
+  row[m_Columns.m_col_number] = 10;
 
   row = *(m_refTreeModel->append());
   row[m_Columns.m_col_id] = 2;
   row[m_Columns.m_col_name] = "Joey Jojo";
   row[m_Columns.m_col_foo] = true;
+  row[m_Columns.m_col_number] = 20;
 
   row = *(m_refTreeModel->append());
   row[m_Columns.m_col_id] = 3;
   row[m_Columns.m_col_name] = "Rob McRoberts";
   row[m_Columns.m_col_foo] = false;
+  row[m_Columns.m_col_number] = 30;
 
   //Add the TreeView's view columns:
   m_TreeView.append_column_editable("ID", m_Columns.m_col_id);
   m_TreeView.append_column_editable("Name", m_Columns.m_col_name);
   m_TreeView.append_column_editable("foo", m_Columns.m_col_foo);
+  m_TreeView.append_column_numeric_editable("foo", m_Columns.m_col_number, "%010d");
 
   show_all_children();
 }
