@@ -37,11 +37,12 @@ protected:
   public:
 
     ModelColumns()
-    { add(m_col_id); add(m_col_name); add(m_col_foo); }
+    { add(m_col_id); add(m_col_name); add(m_col_foo); add(m_col_number); }
 
     Gtk::TreeModelColumn<unsigned int> m_col_id;
     Gtk::TreeModelColumn<Glib::ustring> m_col_name;
     Gtk::TreeModelColumn<bool> m_col_foo;
+    Gtk::TreeModelColumn<int> m_col_number;
   };
 
   ModelColumns m_Columns;
