@@ -37,10 +37,11 @@ protected:
   public:
 
     ModelColumns()
-    { add(m_col_id); add(m_col_name); }
+    { add(m_col_id); add(m_col_name); add(m_col_number); }
 
     Gtk::TreeModelColumn<unsigned int> m_col_id;
     Gtk::TreeModelColumn<Glib::ustring> m_col_name;
+    Gtk::TreeModelColumn<short> m_col_number;
   };
 
   ModelColumns m_Columns;
