@@ -60,7 +60,10 @@ namespace TreeView_Private
   void _auto_store_on_cellrenderer_text_edited_string(const Glib::ustring& path_string, const Glib::ustring& new_text, int model_column, Gtk::TreeView*);
 
   template <class ColumnType> inline
-  void _auto_store_on_cellrenderer_text_edited_numerical(const Glib::ustring& path_string, const Glib::ustring& new_text, int model_column, Gtk::TreeView*);
+  void _auto_store_on_cellrenderer_text_edited_numerical(const Glib::ustring& path_string, const Glib::ustring& new_text, int model_column, Gtk::TreeView*); 
+  
+  template <class ColumnType> inline
+  void _auto_cell_data_func(Gtk::CellRenderer* cell, const Gtk::TreeModel::iterator& iter, int model_column, const Glib::ustring& format);
 }
 
 #endif //DOXYGEN_SHOULD_SKIP_THIS
@@ -140,17 +143,18 @@ public:
   _WRAP_METHOD(int append_column(TreeViewColumn& column), gtk_tree_view_append_column)
 
   /** Appends a View column with the appropriate CellRenderer for the Model column.
+   *
    * The CellRenderer can only be created automatically for some basic
-   * column types, such as Glib::ustring, int, bool, Gdk::Pixbuf. Also,
-   * the default CellRenderer might not be setup exactly as needed.
-   * You might prefer to create the TreeViewColumn and or CellRenderer
-   * manually. You might provide a callback that converts the type into a
-   * string representation with TreeViewColumn::set_cell_data_func().
-   * Otherwise, if the type is not supported, at run-time no text will
-   * appear in the column while the following warning will be generated repeatedly:
+   * column types, such as Glib::ustring, int, double, bool, and Gdk::Pixbuf. 
+   * If the type is not supported then the following warning will be shown:
    * GLib-GObject-WARNING **: unable to set property `text' of type
-   * `gchararray' from value of type `glibmm__CustomBoxed_t'
-   * TODO: Give a more specific warning and/or do more compile-time checks.
+   * `gchararray' from value of type `glibmm__CustomBoxed_t'.
+   *
+   * If the default formatting is not sufficient, or the numeric type is 
+   * not supported, then you could use append_column_numeric(). Or you 
+   * could create the TreeView::Column and/or CellRenderer
+   * manually and use TreeViewColumn::set_cell_data_func() to provide a callback 
+   * that converts the model value into a string representation with .
    *
    * @param title The text to be used in the title header of this column.
    * @param model_column The column in the TreeModel that will be rendered by this View column.
@@ -159,13 +163,27 @@ public:
   template <class ColumnType> inline
   int append_column(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column);
 
+  /** Like append_column(), but only for numeric types, which will be displayed in the specified format.
+   * This convenience template uses TreeView::Column::set_cell_data_func(), so the numeric formatting will 
+   * be deactivated if you specify your own cell_data callback by calling set_cell_data_func() again.
+   *
+   * @param title The text to be used in the title header of this column.
+   * @param model_column The column in the TreeModel that will be rendered by this View column.
+   * @param format A printf-style format, such as "%d", used to create a text representation of the number.
+   * @result The number of columns in the View after appending.
+   */
+  template <class ColumnType> inline
+  int append_column_numeric(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column, const Glib::ustring& format);
+  
   //TODO: danielk suggested use of Glib::Value to simplify/improve this.
   /** Appends a View column with the appropriate CellRenderer for the Model
    * column.  The compiler will attempt to instantiate appropriate template
    * code to automatically store user changes in the model.  To intercept the
    * user's change and implement non-default logic, or if the compiler can't
-   * instantiate appropriate code for your model type, you should use
+   * instantiate appropriate code for your model type, you could use
    * append_column() and connect a signal handler to the CellRenderer.
+   *
+   * @see append_column_numeric_editable().
    *
    * @param title The text to be used in the title header of this column.
    * @param model_column The column in the TreeModel that will be rendered by this View column.
@@ -174,7 +192,21 @@ public:
   template <class ColumnType> inline
   int append_column_editable(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column);
 
+  /** Like append_column_editable(), but only for numeric types, which will be displayed in the specified format.
+   * This convenience template uses TreeView::Column::set_cell_data_func(), so the numeric formatting will 
+   * be deactivated if you specify your own cell_data callback by calling set_cell_data_func() again.
+   *
+   * Note that the user's input will be interpreted as decimal (base 10), regardless of the @a format.
+   *
+   * @param title The text to be used in the title header of this column.
+   * @param model_column The column in the TreeModel that will be rendered by this View column.
+   * @param format A printf-style format, such as "%d", used to create a text representation of the number.
+   * @result The number of columns in the View after appending.
+   */
+  template <class ColumnType> inline
+  int append_column_numeric_editable(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column, const Glib::ustring& format);
 
+  
   /// Creates a View column containing the CellRenderer, and appends it.
   int append_column(const Glib::ustring& title, CellRenderer& cell);
 
@@ -649,6 +681,40 @@ int TreeView::append_column(const Glib::ustring& title, const TreeModelColumn<Co
 }
 
 template <class ColumnType> inline
+int TreeView::append_column_numeric(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column, const Glib::ustring& format)
+{
+  TreeViewColumn* const pViewColumn = Gtk::manage( new TreeViewColumn(title) );
+    
+  //Use a CellRendererText:
+  //We don't use TreeView::Column::append_column(model_column) to generate an appropriate CellRenderer, 
+  //because that uses set_renderer(), which renders the model value using the automatic glib "transformations" (number-string conversions). As well as being unnecessary here, those automatic conversions can't handle all numeric types.
+  CellRenderer* pCellRenderer = manage( new CellRendererText() );
+  pViewColumn->pack_start(*pCellRenderer);
+  
+  //Connect a cell_data callback, to show the number's text representation in the specified format:
+  Gtk::TreeViewColumn::SlotCellData slot = sigc::bind(sigc::ptr_fun(&TreeView_Private::_auto_cell_data_func<ColumnType>), model_column.index(), format);
+  pViewColumn->set_cell_data_func(*pCellRenderer, slot);
+
+  return append_column(*pViewColumn);
+}
+
+template <class ColumnType> inline
+int TreeView::append_column_numeric_editable(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column, const Glib::ustring& format)
+{
+  int cols_count = append_column_numeric(title, model_column, format);
+  
+  //connect signal handlers for auto-storing of edited cell data
+  //Note: This will only work for base-10 (decimal) formatted numbers:
+  CellRenderer *const cell = get_column_cell_renderer(cols_count - 1);
+  if(cell)
+  {
+    TreeView_Private::_connect_auto_store_editable_signal_handler<ColumnType>(this, cell, model_column);
+  }
+   
+  return cols_count;
+}
+
+template <class ColumnType> inline
 int TreeView::append_column_editable(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column)
 {
   g_assert(model_column.type() != 0);
@@ -878,6 +944,35 @@ void _auto_store_on_cellrenderer_text_edited_numerical(const Glib::ustring& path
     //Store the user's new text in the model:
     Gtk::TreeRow row = *iter;
     row.set_value(model_column, (ColumnType)new_value);
+  }
+}
+
+template <class ColumnType> inline
+void _auto_cell_data_func(Gtk::CellRenderer* cell, const Gtk::TreeModel::iterator& iter, int model_column, const Glib::ustring& format)
+{
+  Gtk::CellRendererText* pTextRenderer = dynamic_cast<Gtk::CellRendererText*>(cell);
+  if(!pTextRenderer)
+  {
+    g_warning("gtkmm: TextView: append_column_numeric() was used with a non-numeric type.");
+  }
+  else
+  {
+    if(iter)
+    {
+      //Get the value from the model.
+      Gtk::TreeModel::Row row = *iter;
+      ColumnType value = ColumnType();
+      row.get_value(model_column, value);
+      
+      //Convert it to a string representation:
+      char buff[20];
+      int used = g_snprintf(buff, sizeof(buff), format.c_str(), value); //value must be a numeric type.
+      if(used > 0)
+      {
+        //Show the text representation in the view:
+        pTextRenderer->property_text() = buff;
+      }
+    }
   }
 }
 
