@@ -128,13 +128,13 @@ public:
   typedef sigc::slot<void, CellRenderer*, const Gtk::TreeModel::iterator&> SlotCellData;
 
   /** Sets the slot callback to use for the column.
-   * This function is used instead of the standard attributes mapping for setting the column value, and should set the
+   * This callback function is used instead of the standard attributes mapping for setting the column value, and should set the
    * value of the column's cell renderer as appropriate.
    *
    * See also unset_cell_data_func().
    *
    * @param cell_renderer A Gtk::CellRenderer
-   * @param slot The callback slot to use.
+   * @param slot The callback slot to use. Create this with sigc::mem_fun(), or sigc::ptr_fun().
    */  
   void set_cell_data_func(CellRenderer& cell_renderer, const SlotCellData& slot);
 
