@@ -1,3 +1,14 @@
+2004-12-03  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/treeview.hg: Added append_column_numeric() which allows you 
+	to specify a printf-style format string for the View column, and 
+	append_column_numeric_editable() which does the same, and auto-stores 
+	decimal input. Updated the append_column() documentation to improve 
+	the explanation of supported types, and to suggest use of 
+	append_column_numeric().
+	* examples/book/treeview/list/, editable_cells/: Demonstrate these 
+	new convenience methods.
+
 2004-12-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/label.hg: Added get/set_angle().
